examples/test/testpolicy19899.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19899
  namespace: namespace266
spec:
  podSelector:
    matchLabels:
      key30: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value27
      podSelector:
        matchLabels:
          key36: value29
          key44: value23
          key18: value19
